--- a/03-frogger/README.org
+++ b/03-frogger/README.org
@@ -106,10 +106,8 @@ fun tricks!
    visually. Extend the interface, game logic and scaffold to produce a
    smoothly-animated Frogger that also plays right.
 
-**Add dune project to fix an error
-**"I cannot find the root of the current workspace/project.
-**If you would like to create a new dune project, you can type:"
-**Add -js- in modes to fix an error
-**"Error: No rule found for main.bc.js
-** -> required by alias DEFAULT in dune:9
-** make: *** [all] Error 1 "   
+** Add dune project to fix an error
+   "I cannot find the root of the current workspace/project.
+    If you would like to create a new dune project, you can type:"
+** Add -js- in modes to fix an error
+   "Error: No rule found for main.bc.js -> required by alias DEFAULT in dune:9 make: *** [all] Error 1 "   
